# vdu_controls

./: .gitignore  CHANGELOG.md  Lux-metering.md  MANIFEST.in  PKGBUILD  README  README.md  _config.yml  apply_translations.py  ddc-controls.py  ddc_controls.py  ddcutil_simulator.py  extract_translations.py  make-tar  pyproject.toml  pyrightconfig.json  setup.cfg  vdu_controls.changes  vdu_controls.py  vdu_controls.spec  vdu_lux_chart.py  vlux_meter.py
.github/workflows/: static.yml
ddcutil_simulator_data/: answer
ddcutil_simulator_data/one_monitor_dup_feature_10/: capabilities_1  detect  getvcp_1_0C  getvcp_1_10  getvcp_1_12
ddcutil_simulator_data/three_monitors/: detect  getvcp_3_12
ddcutil_simulator_data/three_monitors_dup_serial/: capabilities_1  detect
ddcutil_simulator_data/three_monitors_pre_v1.7/: capabilities_2  detect  getvcp_2_10  getvcp_3_10
ddcutil_simulator_data/two_monitors_one_bad_cap/: detect  getvcp_1_10  getvcp_1_12  getvcp_2_12
docs/: conf.py  index.rst  mkdocs.yml
docs/_build/man/: vdu_controls.1  vdu_controls.1.html
docs/assets/: ambient-howto.md  light-meters-howto.md  semi-auto-howto.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
icons/: COPYING-ICONS
packaging/: PKGBUILD  vdu_controls.spec  vdu_controls.wrapper
sample-scripts/: Lux-metering.md  laptop-ddcutil-emulator.bash  laptop-virtual-ddcutil.bash  lux-from-webcam.bash  lux-from-webcam.py  vlux_meter.py
src/vdu_controls/: __init__.py  __main__.py  about_dialog.py  app_locale.py  config_ini.py  constants.py  context_menu.py  ddcutil_abstract.py  ddcutil_aggregator.py  ddcutil_emulator.py  ddcutil_exe.py  ddcutil_laptop_panel.py  ddcutil_qdbus.py  greyscale.py  help_dialog.py  icon_utils.py  installer.py  lux_ambient_slider.py  lux_auto.py  lux_config.py  lux_dialog.py  lux_meters.py  misc.py  preset.py  preset_controller.py  preset_dialog.py  qt_imports.py  release.py  scaling.py  settings_editor.py  solar_calc.py  svg.py  unicode.py  vdu_bulk_change.py  vdu_control_panel.py  vdu_controller.py  vdu_controls_application.py  vdu_controls_config.py  vdu_controls_main.py  vdu_exceptions.py  (+3 more)
src/vdu_controls/resources/docs/: help.md
src/vdu_controls/vdu_controls/: constants.py  ddcutil.py  ddcutil_exe.py  ddcutil_laptop_panel.py  ddcutil_qdbus.py  dialog_singleton.py  help.py  icon_utils.py  misc.py  settings_editor.py  svg.py  weather.py  work_scheduler.py
tests/: test_bulk_change_worker.py  test_lux_auto.py  test_rate_limiter.py  test_single_instance.py  test_work_scheduler.py
translations/: about-ar_SA.html  about-fr_FR.html  about-zh_CN.html  about_cs_CZ.txt  about_da_DK.txt  about_de_DE.txt  about_fr_FR.txt  ar_SA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_NZ.qm  en_NZ.ts  es_ES.ts  fr_FR.qm  fr_FR.ts  mi_NZ.ts  proto.ts  zh_CN.ts
utils/: apply_translations.py  convert_alerts.py  ddcutil_simulator.py  extract_translations.py  lux-from-webcam.bash  lux-from-webcam.py  make-man  make-mkdocs  make-pages  make-tar  make-zipapp-pyz  pandoc-man-bold.lua  rename_translation_context.py  translate_file.py  translate_ts.py  update-language-qm-files  update-language-ts-files  update-version
vdu_controls/: vdu_controls_main.py
vdu_controls/vdu_controls/: about_dialog.py  app_locale.py  config_ini.py  constants.py  context_menu.py  ddcutil.py  ddcutil_abstract.py  ddcutil_aggregator.py  ddcutil_emulator.py  ddcutil_exe.py  ddcutil_laptop_panel.py  ddcutil_qdbus.py  greyscale.py  gui_misc.py  help.py  help_dialog.py  icon_utils.py  installer.py  internationalization.py  locale.py  logging.py  lux_ambient_slider.py  lux_auto.py  lux_config.py  lux_dialog.py  lux_meters.py  lux_module.py  misc.py  preset.py  preset_controller.py  preset_dialog.py  qt_imports.py  release.py  scaling.py  settings_editor.py  solar_calc.py  svg.py  unicode.py  vdu_bulk_change.py  vdu_control_panel.py  (+9 more)
vdu_controls/vdu_controls/resources/: __init__.py
vdu_controls/vdu_controls/resources/docs/: about.html  about_license.html  help.md
