# SPDX-FileCopyrightText: 2021-2026 Contributors to vdu_controls <https://github.com/digitaltrails/vdu_controls>
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdu_controls"
version = "2.6.5"
description = "Visual Display Unit virtual control panel"
requires-python = ">=3.9"
dependencies = [
    "PyQt6", "pyudev", "pyserial",
]

[project.scripts]
vdu_controls = "vdu_controls_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/resources/*",
    "*/docs/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.pyright]
# Start with strict rules as the foundation
#typeCheckingMode = "strict"
#typeCheckingMode = "standard"
typeCheckingMode = "basic"

# Environment configuration
pythonVersion = "3.9" # Set to your target version
reportMissingImports = "warning" # Warn instead of error for missing stubs

# Practical overrides for a smoother workflow
reportUnknownMemberType = "none" # Disables errors when libraries lack type stubs
reportUnknownArgumentType = "none" # Prevents cascade errors from untyped third-party code
reportUnknownVariableType = "none" # Keeps focus on your code's explicit types
reportUntypedFunctionDecorator = "warning" # Warns if a decorator strips your type hints
