[metadata]
name = vdu_controls-digitaltrails
version = 1.0.0
author = Michael Hamilton
author_email = michael@actrix.gen.nz
description = A GUI for controlling Visual Display Units
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digitaltrails/vdu_controls
project_urls =
    Bug Tracker = https://github.com/digitaltrails/vdu_controls/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
scripts= vdu_controls.py,
python_requires = >=3.8
